# gtk-hello

./: meson.build
data/: gtk-hello.appdata.xml  gtk-hello.desktop
src/: Application  Application.vala  compile
